--- a/views/index.html
+++ b/views/index.html
@@ -9,10 +9,10 @@
       name="robots"
       content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
     />
-    <meta name="author" content="Titanium Network" />
+    <meta name="author" content="May's macros Network" />
     <meta name="generator" content="Fastify, HTML5" />
     <meta name="application-name" content="Holy Unblocker LTS" />
-    <link rel="canonical" href="https://holyunblocker.org/" />
+    <link rel="canonical" href="https://www.arletahigh.net//" />
     }}
     <title>
       {{mask}}{{Holy Unblocker LTS | Secure & Free Web Proxy Service}}
@@ -24,10 +24,10 @@
     />
     <meta
       name="keywords"
-      content="web proxy, free web proxy, proxy web browser, proxy web, proxy web page, proxy for web, secure proxy, unblock websites, free proxy, bypass censorship, unblock Chromebook, proxy service, online security, private browsing, unblock social media, access blocked content, Titanium Network, proxy server, internet freedom, unblock at school, unblock at work"
+      content="web proxy, free web proxy, proxy web browser, proxy web, proxy web page, proxy for web, secure proxy, unblock websites, free proxy, bypass censorship, unblock Chromebook, proxy service, online security, private browsing, unblock social media, access blocked content, May's macros Network, proxy server, internet freedom, unblock at school, unblock at work"
     />
     <meta property="og:site_name" content="Holy Unblocker LTS" />
-    <meta property="og:url" content="https://holyunblocker.org/" />
+    <meta property="og:url" content="https://www.arletahigh.net//" />
     <meta
       property="og:title"
       content="Holy Unblocker LTS | Secure & Advanced Web Proxy Service"
@@ -47,8 +47,8 @@
     <meta property="og:image:alt" content="Holy Unblocker Logo" />
     <meta property="og:locale" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@titaniumnetdev" />
-    <meta name="twitter:creator" content="@titaniumnetdev" />
+    <meta name="twitter:site" content="@May's macrosnetdev" />
+    <meta name="twitter:creator" content="@May's macrosnetdev" />
     <meta
       name="twitter:title"
       content="Holy Unblocker LTS | Secure & Advanced Web Proxy Service"
@@ -98,17 +98,17 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Holy Unblocker LTS",
-        "alternateName": "Holy Unblocker (Titanium Network)",
-        "url": "https://holyunblocker.org",
-        "logo": "https://holyunblocker.org/assets/img/logo_github.png",
+        "alternateName": "Holy Unblocker (May's macros Network)",
+        "url": "https://www.arletahigh.net/",
+        "logo": "https://www.arletahigh.net//assets/img/logo_github.png",
         "sameAs": [
-          "https://github.com/titaniumnetwork-dev",
-          "https://twitter.com/titaniumnetdev",
+          "https://github.com/May's",
+          "https://twitter.com/May's",
           "https://www.youtube.com/channel/UC6LaREFvs9L72SK1s2PcxNg",
-          "https://holyunblocker.org",
-          "https://www.facebook.com/holyunblocker",
-          "https://www.linkedin.com/company/holyunblocker",
-          "https://www.instagram.com/holyunblocker"
+          "https://www.arletahigh.net/",
+          "https://www.facebook.com/_may3z",
+          "https://www.linkedin.com/company/_may3z",
+          "https://www.instagram.com/_may3z"
         ],
         "description": "Holy Unblocker is an advanced web proxy service designed to bypass network censorship and filters, providing a secure and private browsing experience. It supports a wide range of websites, including YouTube, and receives frequent updates to ensure optimal performance.",
         "founder": {
@@ -120,9 +120,9 @@
           "@type": "ContactPoint",
           "contactType": "Customer Support",
           "email": "8xz62b0ce@mozmail.com",
-          "url": "https://holyunblocker.org/credits"
+          "url": "https://www.arletahigh.net//credits"
         },
-        "keywords": "proxy, web proxy, unblock websites, unblock Chromebook, free web proxy, proxy list, proxy sites, unblock Chromebook, online proxy, proxy server, proxy site, proxy YouTube, bypass Securly, bypass iBoss, bypass Lightspeed filter, Holy Unblocker, Chromebooks, Titanium Network, unblock YouTube, YouTube proxy, unblocked YouTube, YouTube unblocked, anonymous browsing, internet freedom, web censorship, school proxy, work proxy, secure proxy, fast proxy, private proxy, unblock social media, access blocked sites, bypass network restrictions"
+        "keywords": "proxy, web proxy, unblock websites, unblock Chromebook, free web proxy, proxy list, proxy sites, unblock Chromebook, online proxy, proxy server, proxy site, proxy YouTube, bypass Securly, bypass iBoss, bypass Lightspeed filter, Holy Unblocker, Chromebooks, May's macros Network, unblock YouTube, YouTube proxy, unblocked YouTube, YouTube unblocked, anonymous browsing, internet freedom, web censorship, school proxy, work proxy, secure proxy, fast proxy, private proxy, unblock social media, access blocked sites, bypass network restrictions"
       }
     </script>
     <script type="application/ld+json">
@@ -143,7 +143,7 @@
             "name": "How do I unblock websites at school using Holy Unblocker?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "To unblock websites at school, use Holy Unblocker, a free web proxy service that is frequently updated. If a site gets blocked, join the Titanium Network Discord to request a new site. Monthly restocks help prevent mass blocking."
+              "text": "To unblock websites at school, use Holy Unblocker, a free web proxy service that is frequently updated. If a site gets blocked, join the May's macros Network Discord to request a new site. Monthly restocks help prevent mass blocking."
             }
           },
           {
@@ -175,7 +175,7 @@
             "name": "How can I get more Holy Unblocker sites?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Join the Titanium Network Discord at discord.gg/unblock and type \"/proxy\" in our bots channel to receive a new site via DMs from our bot."
+              "text": "Join the May's macros Network Discord at discord.gg/unblock and type \"/proxy\" in our bots channel to receive a new site via DMs from our bot."
             }
           },
           {
@@ -247,7 +247,7 @@
             "name": "How do I deploy Holy Unblocker on my own server?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Holy Unblocker is designed to be easy to deploy and use on personal setups or production loads. Detailed guides can be found at the official GitHub repository and Titanium Network Docs."
+              "text": "Holy Unblocker is designed to be easy to deploy and use on personal setups or production loads. Detailed guides can be found at the official GitHub repository and May's macros Network Docs."
             }
           },
           {
@@ -707,11 +707,11 @@
                   >GitHub repository</a
                 >, the
                 <a
-                  href="{{route}}{{/titaniumnetwork-documentation}}"
-                  title="Titanium Network Documentation"
+                  href="{{route}}{{/May's macrosnetwork-documentation}}"
+                  title="May's macros Network Documentation"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >{{mask}}{{Titanium Network Docs}}</a
+                  >{{mask}}{{May's macros Network Docs}}</a
                 >, or
                 <a
                   href="{{route}}{{/documentation}}"
@@ -753,7 +753,7 @@
                   >GitHub repository</a
                 >, and join our
                 <a
-                  href="{{route}}{{/titaniumnetwork-discord}}"
+                  href="{{route}}{{/May's macrosnetwork-discord}}"
                   title="{{mask}}{{Holy Unblocker LTS Discord Server}}"
                   target="_blank"
                   rel="noopener noreferrer"
