--- a/views/pages/nav/credits.html
+++ b/views/pages/nav/credits.html
@@ -5,7 +5,7 @@
     {{ifSEO}}{{
     <meta
       name="description"
-      content="Holy Unblocker is a secure web proxy service with support for many sites. Bypass filters and freely enjoy a safer private browsing experience or unblock websites on devices such as Chromebooks and at places like school or work without downloading anything."
+      content="Holy Unblocker is a secure web proxy service with support for many sites. Bypass filters and freely enjoy a safer private browsing experience or unblock websites on devices such as Chromebooks and at places like school or work | Arleta Students!"
     />
     }}
     <!--HEAD-CONTENT-->
@@ -54,8 +54,8 @@
               OlyB#9420) }}
             </li>
             <li>
-              {{mask}}{{ YOCTDONALD'S (Co-Owner, v6+, Main Contributor, "HU
-              no-lifer", Obfuscated Bughunter Legend) }}
+              {{mask}}{{ YOCTDONALD'S (Co-Owner, v6+, Main Contributor, "CODE
+              no-lifer", MAYCOLY) }}
             </li>
           </ul>
           <h3>Contributors and Notable Mentions:</h3>
@@ -75,7 +75,7 @@
             <li>{{mask}}{{velzie (Scramjet, Mercury Workshop, Developer)}}</li>
             <li>{{mask}}{{scaratek (Contributor, Refactor Support)}}</li>
             <li>
-              {{mask}}{{ MikeLime (Old Co-Owner of TitaniumNetwork &amp; Mass
+              {{mask}}{{ MikeLime (Old Co-Owner of mays-macro &amp; Mass
               Proxy Site Maker, Web Developer, and Software Developer) }}
             </li>
             <li>{{mask}}{{SexyDuceDuce (Proxy and Web Developer)}}</li>
